--- a/responsive.css
+++ b/responsive.css
@@ -3,7 +3,6 @@
         padding: 20px;
     }
     .nav-section{
-        width: 100vmax;
         margin-top: 20px;
         padding: 0 20px;
         gap: 40px;  
@@ -13,17 +12,44 @@
     }
     .banner-section{
         flex-direction: column;
-        width: 100vmax;
+        gap: 5px;
     }
-    .banner-desc{
-        margin-top: 30px;
-        text-align: center;
+    .ban-headline, .ban-title{
+        margin-top: 35px;
+    }
+    .banner-head1{
+        font-size: 1.5rem;
+    }
+    .banner-head2{
+        font-size: 1.5rem;
+    }
+    .order-box{
+        margin-top: 40px;
+        flex-direction: column;
+        align-items: start;
+        gap: 20px;
+    }
+    .polygon-btn{
+        width: 40px;
+        height: 40px;
+        margin-left: 55px;
+        padding: 10px 14px;
+    }
+    .polygon-btn img{
+        width: 20px;
+        height: 20px;
+    }
+    .various-snacks{
+        flex-direction: column;
+    }
+    .snacks{
+        width: 200px;
     }
     .info-desk{
-        width: 100vmax;
         padding: 18px 20px;
         flex-direction: column;
         gap: 15px;
+        width: 100vmax;
     }
     .our-time{
         align-items: center;
