--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 body{
     padding: 20px 40px;
     font-family: sans-serif;
+    margin: 0 auto;
+    max-width: 1380px;
 }
 /* header starts */
 /* nav-section starts */
