--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ font-size: 20px;
     margin-top: 70px;
     display: flex;
     justify-content: space-between;
+    gap: 50px;
 }
 .service-types{
     border-radius: 20px;
@@ -308,6 +309,7 @@ font-size: 20px;
     margin-top: 70px;
     display: flex;
     justify-content: space-between;
+    gap: 70px;
 }
 .left-compli-part{
     width: 45%;
@@ -319,7 +321,7 @@ font-size: 20px;
     justify-content: center;
     align-items: center;
     gap: 25px;
-    padding: 0 30px;
+    padding: 30px 25px;
 }
 .familiarity{
     display: flex;
@@ -339,9 +341,10 @@ font-size: 20px;
     box-shadow: 1px 1px 10px 2px #B6B6B6;
     border-radius: 35px;
     border: none;
+    text-align: center;
+   
 }
 .right-food-pho img{
-    width: 100%;
     border-radius: 35px;
 }
 /* testimonials-sec ends */
@@ -359,7 +362,7 @@ font-size: 20px;
     padding: 20px 0 20px 100px;
 }
 .pick-items img{
-    width: 50%;
+    width: 60%;
 }
 .cli-add{
     color: white;
