--- a/responsive.css
+++ b/responsive.css
@@ -125,7 +125,8 @@
         flex-direction: column;
         align-items: start;
         width: fit-content;
-        padding: 40px 35px ;
+        padding: 40px 35px;
+        border-radius: 25px;
     }
     .pick-items{
         padding: 0;
@@ -136,6 +137,12 @@
     .cli-add {
        width: 250px;
        padding: 0;
+    }
+    #email{
+        padding: 20px 70px 20px 15px;
+    }
+    .subscribe-btn{
+        left: 140px;
     }
     footer{
         flex-direction: column;
