--- a/responsive.css
+++ b/responsive.css
@@ -65,23 +65,30 @@
         width: 250px;
     }
     .info-desk{
-        width: 300px;
+        width: 250px;
         text-align: center;
-        padding: 0;
         flex-direction: column;
         gap: 25px;
         box-shadow: none;
+    }
+    .info-desk:hover{
+        box-shadow: 5px 5px 15px 8px #B6B6B6;
+        padding: 3px;
     }
     .our-time{
         gap: 15px;
         border: none;
         align-items: center;
-        padding-left: 70px;
+        padding-left: 70px ;
+        padding-top: 5px;
+        padding-bottom: 5px;
     }
     .place{
         gap: 12px;
         border: none;
         padding-left: 70px;
+        padding-top: 5px;
+        padding-bottom: 5px;
     }
     .menu-demo{
         margin-top: 30px;
@@ -156,5 +163,13 @@
     .details{
         gap: 15px;
         width: fit-content;
+    }
+
+    /* for js */
+    #see-more{
+        display: none;
+        margin-top: 30px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
     }
 }
