--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 /* header starts */
 /* nav-section starts */
 .nav-section{
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     gap: 50px;
@@ -24,6 +25,7 @@ body{
     text-decoration: none;
     color: black;
     font-size: 20px;
+    font-weight: bold;
 }
 .search {
     display: flex;
@@ -38,7 +40,7 @@ body{
 }
 .pop-up{
     position: absolute;
-    right: 20px;
+    right: 17px;
     border-left: 2px solid #ADADAD;
     padding: 8px 0 8px 8px;
     font-size: 20px;
@@ -46,20 +48,23 @@ body{
 .search ::placeholder{
     color: black;
     font-size: 15px;
+    font-weight: bold;
 }
 .search-term {
-    border-right: none;
-    padding: 10px 0 10px 30px;
+    border: 1px solid rgb(181, 176, 176);
+    padding: 10px 0 10px 35px;
     height: 30px;
-    border: none;
     border-radius: 7px;
-    box-shadow: 3px 3px 10px 3px #00000048;
+    outline: none;
+  }
+  .search-term:hover{
+    box-shadow:  2px 2px 7px 4px #B6B6B6;
   }
 /* nav-section ends */
 
 /* banner-section starts */
 .banner-section{
-    margin: 40px 0;
+    margin: 50px 0;
     display: flex;
     gap: 15px;
 }
@@ -76,13 +81,13 @@ body{
     color: #F48E28;
 }
 .banner-desc{
-    margin-top: 80px;
+    margin-top: 100px;
 }
 .ban-headline, .ban-title{
-    margin-top: 80px;
+    margin-top: 50px;
 }
 .banner-desc p{
-    width: 60%;
+    width: 65%;
 }
 .banner-head1{
     font-size: 2.5rem;
@@ -104,10 +109,14 @@ body{
 .order-btn{
 padding: 15px 25px;
 color: white;
+font-weight: bold;
 background: linear-gradient(#EFAB68, #F48E28);
 border: none;
 border-radius: 6px;
 font-size: 20px;
+}
+.order-btn:hover{
+    padding: 17px 25px; 
 }
 .polygon-btn{
     width: 65px;
@@ -115,9 +124,11 @@ font-size: 20px;
     border-radius: 50px;
     border: none;
     text-align: center;
-    background-color: white;  
+    background-color: rgba(245, 245, 245, 0.798);  
     padding: 10px 20px;
-    box-shadow: 1px 1px 15px 1px #83A5FF;
+}
+.polygon-btn:hover{
+    box-shadow: 1px 1px 13px 1px #83A5FF;
 }
 .polygon-btn img{
     width: 30px;
@@ -148,11 +159,14 @@ font-size: 20px;
     gap: 20px; 
 }
 .snacks{
+   border: 1px solid rgb(181, 176, 176);
    border-radius: 30px;
-   border: none;
    width: 230px;
    height: 280px;
-   box-shadow:  0px 0px 8px 2px #a49f9f4f;
+}
+.snacks:hover{
+    box-shadow:  3px 3px 9px 5px #B6B6B6;
+    padding: 3px;
 }
 .snack-pic{
     position: absolute;
@@ -180,7 +194,11 @@ font-size: 20px;
     padding: 40px 60px;
     display: flex;
     border-radius: 30px;
-    box-shadow: 1px 1px 10px 2px #B6B6B6;
+    background-color: whitesmoke;
+}
+.info-desk:hover{
+    box-shadow: 5px 5px 15px 8px #B6B6B6;
+    padding: 30px 64px;
 }
 .our-time{
     display: flex;
@@ -208,13 +226,14 @@ font-size: 20px;
 
 /* itmes-selection starts */
 .itmes-selection{
-    margin-top: 80px;
+    margin-top: 90px;
 }
 .products-highlight{
     text-align: center;
 }
 .products-highlight p{
     color: red;
+    padding: 5px;
 }
 .products-highlight h1{
     font-weight: 700;
@@ -223,11 +242,15 @@ font-size: 20px;
     margin-top: 60px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 25px;
+    gap: 35px;
 }
 .popular-items{
     border-radius: 20px;
-    box-shadow: 1px 1px 10px 2px #00000033;
+    border: 1px solid rgb(181, 176, 176);
+}
+.popular-items:hover{
+    box-shadow:  3px 3px 9px 5px #B6B6B6;
+    padding: 3px;
 }
 .special-pic img{
     width: 100%;
@@ -239,7 +262,7 @@ font-size: 20px;
     flex-direction: column;
     justify-content: center;
     gap: 15px;
-    padding: 8px 15px;
+    padding: 10px 18px;
 }
 .name-rate{
     display: flex;
@@ -256,6 +279,9 @@ font-size: 20px;
     padding: 8px 13px;
     border: none;
 }
+.cart button:hover{
+    padding: 10px 15px;
+}
 .Products-btn{
     margin-top: 40px;
     text-align: center;
@@ -266,6 +292,11 @@ font-size: 20px;
     border-radius: 35px;
     padding: 20px 30px;
     border: none;
+}
+
+.Products-btn button:hover{
+    background-color: #e45e3d;
+    padding: 20px 20px;
 }
 /* itmes-selection ends */
 
@@ -281,13 +312,16 @@ font-size: 20px;
 }
 .service-types{
     border-radius: 20px;
-    border: none;
-    box-shadow: 1px 1px 10px 2px #B6B6B6;
+    border: 1px solid rgb(181, 176, 176);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 25px;
     padding: 60px 30px;
+}
+.service-types:hover{
+    padding: 65px 35px;
+    box-shadow: 1px 1px 10px 2px #B6B6B6;
 }
 .catelary-pic{
     background-color: #F5DDC4;
@@ -313,9 +347,8 @@ font-size: 20px;
 }
 .left-compli-part{
     width: 45%;
-    border-radius: 35px;
-    border: none;
-    box-shadow: 1px 1px 10px 2px #B6B6B6;
+    border-radius: 30px;
+    border: 1px solid rgb(181, 176, 176);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -323,9 +356,13 @@ font-size: 20px;
     gap: 25px;
     padding: 30px 25px;
 }
+.left-compli-part:hover{
+    box-shadow: 1px 1px 10px 2px #B6B6B6;
+    padding: 33px 30px;
+}
 .familiarity{
     display: flex;
-    gap: 10px;
+    gap: 17px;
 }
 .cli-pic{
     border-radius: 100%;
@@ -338,11 +375,13 @@ font-size: 20px;
 }
 .right-food-pho{
     width: 45%;
-    box-shadow: 1px 1px 10px 2px #B6B6B6;
-    border-radius: 35px;
-    border: none;
+    border: 1px solid rgb(181, 176, 176);
+    border-radius: 30px;
     text-align: center;
-   
+}
+.right-food-pho:hover{
+    box-shadow: 1px 1px 10px 2px #B6B6B6;
+    padding: 5px 20px;
 }
 .right-food-pho img{
     border-radius: 35px;
@@ -403,6 +442,7 @@ footer{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    color: #B6B6B6;
 }
 .social-link{
     display: flex;
@@ -425,19 +465,29 @@ footer{
 }
 #email-id{
     border-radius: 32px;
-    border: none;
-    box-shadow: 1px 1px 10px 2px #B6B6B6;
+    border: 1px solid rgb(181, 176, 176);
     padding: 7px;
     color: #B6B6B6;
+    outline: none;
+}
+#email-id:hover{
+    box-shadow: 1px 1px 10px 2px #B6B6B6;
 }
 .right-ang i{
     position: absolute;
-    right: 15px;
+    right: 10px;
     bottom: 5px;
     border-radius: 50%;
     background-color: #F48E28;
     padding: 3px 6px;
     color: white;
-    font-size: 15px;
+    font-size: 13px;
 }
 /* footer ends */
+
+#see-more{
+    display: none;
+    margin-top: 60px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 25px;
+}
