--- a/responsive.css
+++ b/responsive.css
@@ -1,21 +1,23 @@
 @media only screen and (min-width:200px) and (max-width:576px){
     body{
-        padding: 25px;
+        padding: 20px;
         width: max-content;
     }
     .nav-section{
         margin-top: 20px;
         padding: 0;
-        gap: 30px;  
+        gap: 15px;  
+        width: 250px;
     }
     .logo-pic img{
         width: 50px;
     }
     .nav-bar{
-        gap: 20px; 
+        gap: 15px; 
     }
     .nav-bar a{
         font-size: 15px;
+
     }
     .search-term{
         padding: 0;
@@ -65,15 +67,15 @@
         width: 250px;
     }
     .info-desk{
+        border: 1px solid rgb(181, 176, 176);
         width: 250px;
         text-align: center;
         flex-direction: column;
         gap: 25px;
-        box-shadow: none;
+        padding: 0;
     }
     .info-desk:hover{
-        box-shadow: 5px 5px 15px 8px #B6B6B6;
-        padding: 3px;
+        padding: 3px 0;
     }
     .our-time{
         gap: 15px;
@@ -114,6 +116,7 @@
         align-items: center;
         gap: 25px;
         padding: 35px 10px;
+        width: 250px;
     }
     .clients-review{
         margin-top: 50px;
