--- a/responsive.css
+++ b/responsive.css
@@ -6,7 +6,7 @@
     .nav-section{
         margin-top: 20px;
         padding: 0;
-        gap: 15px;  
+        gap: 20px;  
         width: 250px;
     }
     .logo-pic img{
@@ -21,12 +21,13 @@
     }
     .search-term{
         padding: 0;
+        height: 35px;
     }
     .search ::placeholder{
-        padding-left: 40px;
+        padding-left: 30px;
     }
     .find{
-        top: 5px;
+        top: 8px;
     }
     .banner-section{
         flex-direction: column;
@@ -137,6 +138,7 @@
         width: fit-content;
         padding: 40px 35px;
         border-radius: 25px;
+        margin-top: 120px;
     }
     .pick-items{
         padding: 0;
@@ -152,7 +154,7 @@
         padding: 20px 70px 20px 15px;
     }
     .subscribe-btn{
-        left: 140px;
+        left: 153px;
     }
     footer{
         flex-direction: column;
@@ -162,6 +164,12 @@
     .more-info{
         width: 250px;
         gap: 15px;
+    }
+    .social-link{
+        gap: 15px;
+    }
+    .social-link i{
+        font-size: 23px;
     }
     .details{
         gap: 15px;
