my tenth commit

--- a/responsive.css
+++ b/responsive.css
@@ -32,6 +32,7 @@
     .banner-section{
         flex-direction: column;
         gap: 5px;
+        margin-top: 20px;
     }
     .ban-headline, .ban-title{
         margin-top: 35px;
