--- a/responsive.css
+++ b/responsive.css
@@ -105,10 +105,7 @@
     .Products-btn{
         text-align: start;
     }
-    .products-highlight p{
-        text-align: center;
-    }
-    .products-highlight h1{
+    .products-highlight{
         text-align: start;
     }
     .your-choice{
