--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{
 
 /* banner-section starts */
 .banner-section{
-    margin: 50px 0;
+    margin-top: 90px;
     display: flex;
     gap: 15px;
 }
@@ -83,8 +83,11 @@ body{
 .banner-desc{
     margin-top: 100px;
 }
-.ban-headline, .ban-title{
+.ban-headline{
     margin-top: 50px;
+}
+.ban-title{
+    margin-top: 65px;
 }
 .banner-desc p{
     width: 65%;
