--- a/responsive.css
+++ b/responsive.css
@@ -17,7 +17,6 @@
       justify-content: center;
     }
     .banner-section{ 
-        /* width: 250px;        */
         flex-direction: column;
         gap: 5px;
         text-align: center
@@ -44,11 +43,12 @@
     }
     .right-banner{
         margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .various-snacks{
         flex-direction: column;
-        align-items: center;
-        width: 320px;
         gap: 2rem;
     }
     .info-desk{
@@ -65,6 +65,11 @@
     .place{
         gap: 12px;
         border: none;
+    }
+    .items-selection, .see-more{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .menu-demo{
         display: flex;
@@ -136,5 +141,8 @@
     }
     .social-link i{
         gap: 15px;
+    }
+    .hide{
+        display: none;
     }
 }
